--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">PinClassroom</string>
+    <string name="title_activity_aulas_web_view">AulasWebView</string>
 </resources>
